<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dates"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_pac"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pacientes" />
        <item
            android:id="@+id/nav_add_pac"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_pacientes" />
        <item
            android:id="@+id/nav_times"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_horario" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_chat" />

    </group>

    <item android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
