<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.com.gauta.usedoc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dates"
        android:name="mx.com.gauta.usedoc.ui.citas.CitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/citas_fragment" />

    <fragment
        android:id="@+id/nav_pac"
        android:name="mx.com.gauta.usedoc.ui.pacientes.PacientesFragment"
        android:label="@string/menu_pacientes"
        tools:layout="@layout/pacientes_fragment" />

    <fragment
        android:id="@+id/nav_add_pac"
        android:name="mx.com.gauta.usedoc.ui.addpaciente.AddPacienteFragment"
        android:label="@string/menu_add_pacientes"
        tools:layout="@layout/add_paciente_fragment" />

    <fragment
        android:id="@+id/nav_times"
        android:name="mx.com.gauta.usedoc.ui.horario.HorarioFragment"
        android:label="@string/menu_horario"
        tools:layout="@layout/horario_fragment" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="mx.com.gauta.usedoc.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/chat_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="mx.com.gauta.usedoc.ui.perfil.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="mx.com.gauta.usedoc.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/action_settings"
        android:name="mx.com.gauta.usedoc.ui.LogOff"
        android:label="@string/log_Off_btn_str"
        tools:layout="@layout/log_off_fragment"
        />

</navigation>